# Proyecto

./: CMakeLists.txt  Traductor.txt  arbol.cpp  arbol.h  arbolAvl.cpp  arbolAvl.h  curl_helper.cpp  curl_helper.h  historial.txt  main.cpp
